// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Feature Component Snapshots > AddressDisplay > renders with complete address 1`] = `
<div
  class="space-y-1 "
>
  <div
    class="text-sm"
  >
    123 Main Street
  </div>
  <div
    class="text-sm"
  >
    Suite 100
  </div>
  <div
    class="text-sm"
  >
    London
  </div>
  <div
    class="text-sm"
  >
    Greater London
  </div>
  <div
    class="text-sm"
  >
    SW1A 1AA
  </div>
</div>
`;

exports[`Feature Component Snapshots > AddressDisplay > renders with minimal address 1`] = `
<div
  class="space-y-1 "
>
  <div
    class="text-sm"
  >
    456 Oak Avenue
  </div>
  <div
    class="text-sm"
  >
    Manchester
  </div>
  <div
    class="text-sm"
  >
    M1 1AA
  </div>
</div>
`;

exports[`Feature Component Snapshots > AddressDisplay > renders with no address 1`] = `
<span
  class="text-muted-foreground"
>
  No address provided
</span>
`;

exports[`Feature Component Snapshots > AssetEmptyState > renders with no search term 1`] = `
<div
  class="text-center py-12"
>
  <svg
    class="lucide lucide-tag h-12 w-12 text-gray-400 mx-auto mb-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
    />
    <circle
      cx="7.5"
      cy="7.5"
      fill="currentColor"
      r=".5"
    />
  </svg>
  <h3
    class="text-lg font-medium text-gray-900 mb-2"
  >
    No assets found
  </h3>
  <p
    class="text-gray-500 mb-4"
  >
    Get started by creating your first asset.
  </p>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 rounded-2xl"
  >
    <svg
      class="lucide lucide-plus w-4 h-4 mr-2"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 12h14"
      />
      <path
        d="M12 5v14"
      />
    </svg>
    Add Asset
  </button>
</div>
`;

exports[`Feature Component Snapshots > AssetEmptyState > renders with search term 1`] = `
<div
  class="text-center py-12"
>
  <svg
    class="lucide lucide-tag h-12 w-12 text-gray-400 mx-auto mb-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
    />
    <circle
      cx="7.5"
      cy="7.5"
      fill="currentColor"
      r=".5"
    />
  </svg>
  <h3
    class="text-lg font-medium text-gray-900 mb-2"
  >
    No assets found
  </h3>
  <p
    class="text-gray-500 mb-4"
  >
    Try adjusting your search criteria.
  </p>
</div>
`;

exports[`Feature Component Snapshots > CompanyTypeBadges > renders with multiple types 1`] = `
<div
  class="flex flex-wrap gap-1"
>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
  >
    Manufacturer
  </div>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
  >
    Supplier
  </div>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
  >
    Contact
  </div>
</div>
`;

exports[`Feature Component Snapshots > CompanyTypeBadges > renders with no types 1`] = `
<span
  class="text-muted-foreground text-sm"
>
  No types
</span>
`;

exports[`Feature Component Snapshots > CompanyTypeBadges > renders with single type 1`] = `
<div
  class="flex flex-wrap gap-1"
>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
  >
    Manufacturer
  </div>
</div>
`;

exports[`Feature Component Snapshots > InventoryEmptyState > renders with no search term 1`] = `
<div
  class="text-center py-12"
>
  <svg
    class="lucide lucide-package h-12 w-12 text-gray-400 mx-auto mb-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
    />
    <path
      d="M12 22V12"
    />
    <path
      d="m3.3 7 7.703 4.734a2 2 0 0 0 1.994 0L20.7 7"
    />
    <path
      d="m7.5 4.27 9 5.15"
    />
  </svg>
  <h3
    class="text-lg font-medium text-gray-900 mb-2"
  >
    No parts found
  </h3>
  <p
    class="text-gray-500 mb-4"
  >
    Get started by adding your first inventory part.
  </p>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 rounded-2xl"
  >
    <svg
      class="lucide lucide-plus w-4 h-4 mr-2"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 12h14"
      />
      <path
        d="M12 5v14"
      />
    </svg>
    Add Part
  </button>
</div>
`;

exports[`Feature Component Snapshots > InventoryEmptyState > renders with search term 1`] = `
<div
  class="text-center py-12"
>
  <svg
    class="lucide lucide-package h-12 w-12 text-gray-400 mx-auto mb-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
    />
    <path
      d="M12 22V12"
    />
    <path
      d="m3.3 7 7.703 4.734a2 2 0 0 0 1.994 0L20.7 7"
    />
    <path
      d="m7.5 4.27 9 5.15"
    />
  </svg>
  <h3
    class="text-lg font-medium text-gray-900 mb-2"
  >
    No parts found
  </h3>
  <p
    class="text-gray-500 mb-4"
  >
    Try adjusting your search criteria.
  </p>
</div>
`;

exports[`Feature Component Snapshots > UserEmploymentBadge > renders Bank Staff status 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 hover:bg-primary/80 text-xs bg-purple-100 text-purple-800 border-purple-200"
>
  Bank Staff
</div>
`;

exports[`Feature Component Snapshots > UserEmploymentBadge > renders Contractor status 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 hover:bg-primary/80 text-xs bg-orange-100 text-orange-800 border-orange-200"
>
  Contractor
</div>
`;

exports[`Feature Component Snapshots > UserEmploymentBadge > renders Full Time status 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 hover:bg-primary/80 text-xs bg-green-100 text-green-800 border-green-200"
>
  Full Time
</div>
`;

exports[`Feature Component Snapshots > UserEmploymentBadge > renders Part Time status 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 hover:bg-primary/80 text-xs bg-blue-100 text-blue-800 border-blue-200"
>
  Part Time
</div>
`;

exports[`Feature Component Snapshots > UserEmploymentBadge > renders with no status 1`] = `null`;

exports[`UI Component Snapshots > Badge > renders default badge 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
>
  Default
</div>
`;

exports[`UI Component Snapshots > Badge > renders destructive badge 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
>
  Destructive
</div>
`;

exports[`UI Component Snapshots > Badge > renders outline badge 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
>
  Outline
</div>
`;

exports[`UI Component Snapshots > Badge > renders secondary badge 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
>
  Secondary
</div>
`;

exports[`UI Component Snapshots > Button > renders default button 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
>
  Click me
</button>
`;

exports[`UI Component Snapshots > Button > renders disabled button 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
  disabled=""
>
  Disabled
</button>
`;

exports[`UI Component Snapshots > Button > renders ghost button 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
>
  Ghost
</button>
`;

exports[`UI Component Snapshots > Button > renders outline button 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
>
  Outline
</button>
`;

exports[`UI Component Snapshots > Button > renders secondary button 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 px-4 py-2"
>
  Secondary
</button>
`;

exports[`UI Component Snapshots > Card > renders basic card 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="text-2xl font-semibold leading-none tracking-tight"
    >
      Card Title
    </h3>
  </div>
  <div
    class="p-6 pt-0"
  >
    <p>
      Card content goes here
    </p>
  </div>
</div>
`;

exports[`UI Component Snapshots > Progress > renders progress at 0% 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
  data-max="100"
  data-state="indeterminate"
  role="progressbar"
>
  <div
    class="h-full w-full flex-1 bg-primary transition-all"
    data-max="100"
    data-state="indeterminate"
    style="transform: translateX(-100%);"
  />
</div>
`;

exports[`UI Component Snapshots > Progress > renders progress at 50% 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
  data-max="100"
  data-state="indeterminate"
  role="progressbar"
>
  <div
    class="h-full w-full flex-1 bg-primary transition-all"
    data-max="100"
    data-state="indeterminate"
    style="transform: translateX(-50%);"
  />
</div>
`;

exports[`UI Component Snapshots > Progress > renders progress at 100% 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
  data-max="100"
  data-state="indeterminate"
  role="progressbar"
>
  <div
    class="h-full w-full flex-1 bg-primary transition-all"
    data-max="100"
    data-state="indeterminate"
    style="transform: translateX(-0%);"
  />
</div>
`;

exports[`UI Component Snapshots > Separator > renders horizontal separator 1`] = `
<div
  class="shrink-0 bg-border h-[1px] w-full"
  data-orientation="horizontal"
  role="none"
/>
`;

exports[`UI Component Snapshots > Separator > renders vertical separator 1`] = `
<div
  class="shrink-0 bg-border h-full w-[1px]"
  data-orientation="vertical"
  role="none"
/>
`;

exports[`UI Component Snapshots > Skeleton > renders skeleton loader 1`] = `
<div
  class="animate-pulse rounded-md bg-muted h-4 w-full"
/>
`;
